# praktikiZioVpo

./: .gitignore  CMakeLists.txt  GO.cmd  README.md  check.cmd
.github/workflows/: windows-build.yml
docs/: PRACTICE1-CHECKLIST.md  PRACTICE2-CHECKLIST.md
include/: common.h
resources/: app.rc  resource.h
rpc/: Pract2Control.idl
src/: main.cpp  service.cpp
